service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-devops-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: hello-devops
  ports:
    - port: 3000
      targetPort: 3000
